# GPU_Kernel

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  compile_flags.txt
src/flash_attn/: flash_attn.cu
src/gemm/: gemm.cu  plot_gemm.py  readme.md
src/include/: utils.hpp
src/matrix_multiply/: matrix_multiply.cu
src/matrix_transpose/: matrix_transpose.cu
src/ncu/: kernel.cu  kernel_abc  kernel_abc.ncu-rep
src/parallel_reduction/: parallel_reduction.cu  plot_reduction.py  reduction_benchmark.cu
src/sm_info/: sm_info.cu
src/vector_add/: vector_add.cu  vector_add_unified.cu
